# llm-schema-registry

./: Cargo.toml  README.md
.github/workflows/: publish-crates.yml
crates/llm-integrations/: README.md
crates/schema-registry-analytics/: Cargo.toml
crates/schema-registry-api/: Cargo.toml  README.md
crates/schema-registry-cli/: Cargo.toml  README.md
crates/schema-registry-compatibility/: Cargo.toml  README.md
crates/schema-registry-core/: Cargo.toml  README.md
crates/schema-registry-lineage/: Cargo.toml  README.md
crates/schema-registry-migration/: Cargo.toml  README.md
crates/schema-registry-observability/: Cargo.toml  README.md
crates/schema-registry-security/: Cargo.toml  README.md
crates/schema-registry-server/: Cargo.toml
crates/schema-registry-storage/: Cargo.toml  README.md
crates/schema-registry-validation/: Cargo.toml
scripts/: update-crate-metadata.sh
