[package]
name = "schema-registry-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for managing schemas, lineage, analytics, and migrations"
keywords = ["cli", "schema", "registry", "command-line", "terminal"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "schema-cli"
path = "src/main.rs"

[dependencies]
# Internal crates
schema-registry-core = { workspace = true }
schema-registry-storage = { workspace = true }
schema-registry-validation = { workspace = true }
schema-registry-compatibility = { workspace = true }
schema-registry-analytics = { workspace = true }
schema-registry-lineage = { workspace = true }
schema-registry-migration = { workspace = true }
schema-registry-security = { workspace = true }

# Async runtime
tokio = { workspace = true }

# CLI framework
clap = { workspace = true }

# Output formatting
comfy-table = { workspace = true }
colored = "2.1"
indicatif = "0.17"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = "0.8"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
url = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Config management
config = "0.14"
dirs = "5.0"
