[package]
name = "schema-registry-lineage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Schema lineage tracking with dependency graphs, impact analysis, and visualization"
keywords = ["lineage", "dependency-graph", "impact-analysis", "schema-evolution"]
categories = ["development-tools", "visualization", "data-structures"]
readme = "README.md"

[dependencies]
# Internal dependencies
schema-registry-core = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Graph library
petgraph = "0.6"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Identifiers
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Concurrency
parking_lot = { workspace = true }

# Logging/Tracing
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
criterion = { workspace = true }
