[package]
name = "schema-registry-observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Observability, metrics, tracing, and monitoring for the Schema Registry"
keywords = ["observability", "metrics", "tracing", "monitoring", "prometheus"]
categories = ["development-tools", "asynchronous"]
readme = "README.md"

[dependencies]
schema-registry-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }
prometheus = { workspace = true }
metrics = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tonic = { workspace = true }
thiserror = { workspace = true }
